[bdist_wheel]
universal = 1

[metadata]
name = geventmp
version = 0.0.1dev0
description = Multiprocessing Gevent Extension
author = Karellen, Inc.
author_email = supervisor@karellen.co
maintainer = Arcadiy Ivanov
maintainer_email = arcadiy@ivanov.biz
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache License, Version 2.0
license_file = LICENSE
keywords = gevent multiprocessing mp monkey
url = https://github.com/karellen/geventmp
project_urls =
    Bug Tracker = https://github.com/karellen/geventmp/issues
    Source Code = https://github.com/karellen/geventmp/
    Documentation = https://github.com/karellen/geventmp/
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Development Status :: 2 - Pre-Alpha

[options]
zip_safe = True
install_requires =
    gevent>=1.3.0
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src
exclude = *.tests